Add initial support for v3 vocabulary

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,6 +32,8 @@
 
         <% if request.original_url.include? '/terms' %>
           <li><%= link_to "V1 Vocabulary", vocabs_path %></li>
+        <% elsif request.original_url.include? '/v3' %>
+          <li><%= link_to "V3 Vocabulary", vocabs_v3_index_path %></li>
         <% else %>
           <li><%= link_to "Vocabulary", vocabs_v2_index_path %></li>
         <% end %>
@@ -39,6 +41,8 @@
 
         <% if request.original_url.include? '/terms' %>
           <li><%= link_to "V1 Search", search_results_path %></li>
+          <% elsif request.original_url.include? '/v3' %>
+              <li><%= link_to "V3 Search", search_results_v3_path %></li>
         <% else %>
           <li><%= link_to "Search", search_results_v2_path %></li>
         <% end %>
