Update to make V3 the default version

--- a/app/views/homepage/about.html.erb
+++ b/app/views/homepage/about.html.erb
@@ -235,6 +235,25 @@
       </td>
     </tr>
 
+    <tr>
+      <td>&nbsp;</td>
+      <td>
+        <div class="media">
+          <div class="media-left">
+            <%= image_tag("about/about_adrian_williams.jpg", class: 'hidden-xs') %>
+          </div>
+          <div class="media-body">
+            <h4 class="media-heading">
+              Adrian Williams
+            </h4>
+            <p>
+              Adrian Williams is the Cataloging & Metadata Librarian at the University of Kentucky Libraries. They have an MLIS from Florida State University. Their research interests include inclusive and user-accessible subject headings, and the history of cataloging and of the library catalog. They can be reached at <%= link_to "@metadatagoblin", "https://twitter.com/metadatagoblin", target: "_blank" %> or <%= hidden_email("adrian.d.williams@uky.edu", @reveal_emails) %>.
+            </p>
+          </div>
+        </div>
+      </td>
+    </tr>
+
     </tbody>
   </table>
 
