--- a/app/assets/stylesheets/homosaurus.css.scss
+++ b/app/assets/stylesheets/homosaurus.css.scss
@@ -59,3 +59,14 @@ div.homepage_info {
 .footer a{color:#9d9d9d}
 .footer a:focus{color:#fff;background-color:transparent}
 .footer a:hover{color:#fff;background-color:transparent}
+
+.well_language {
+  padding: 0px 4px;
+  margin-bottom: 0px;
+  min-height: 20px;
+  background-color: #f5f5f5;
+  border: 1px solid #e3e3e3;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+}
