historyNote to export. Fix notification banners

--- a/app/views/homepage/contact.html.erb
+++ b/app/views/homepage/contact.html.erb
@@ -50,7 +50,7 @@
             </div>
           </div>
 
-            <% if  @show_captcha_v2 %>
+            <% if  1==1 || @show_captcha_v2 %>
               <div class="form-group">
                 <div class="col-sm-offset-3 col-sm-7 col-md-6">
                   <div class="newsletter_checkbox pull-right">
