--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -7,5 +7,5 @@
 
   <p>If you are interested in purchasing some Homosaurus swag, please visit our <%= link_to "online shop", "https://homosaurus.threadless.com" %>. All proceeds are used to support the project or are donated to LGBTQ+ organizations.</p>
 
-  <p>If you are using the Homosaurus, we want to hear from you! Please <%= link_to "contact us", contact_path %> to let us know how you are using this vocabulary and share any feedback you might have. </p>
+  <p>If you are using the Homosaurus, we want to hear from you! Please <%= link_to "contact us", contact_path %> to let us know how you are using this vocabulary and share any feedback you might have. One can also join our Google Group community at: <%= link_to "https://groups.google.com/g/homoitcommunity", "https://groups.google.com/g/homoitcommunity" %></p>
 </div>
